Configured Custom Collection View for User Services

--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HKl-lA-6Kt">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -326,10 +326,98 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="109.82142857142857"/>
         </scene>
+        <!--User Services View Controller-->
+        <scene sceneID="kig-Uy-nj5">
+            <objects>
+                <viewController id="HKl-lA-6Kt" customClass="UserServicesViewController" customModule="Boatell_v3" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Zwz-pa-iWD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BoatelllV2" translatesAutoresizingMaskIntoConstraints="NO" id="SSl-Dk-I9f">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mechanic copy" translatesAutoresizingMaskIntoConstraints="NO" id="uyu-Pw-VNu">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="146"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="uyu-Pw-VNu" secondAttribute="height" multiplier="207:73" id="kip-J4-Q9f"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5pC-wV-jMm">
+                                <rect key="frame" x="0.0" y="146" width="414" height="2"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="5pC-wV-jMm" secondAttribute="height" multiplier="207:1" id="JS4-r1-QYt"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Service" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Djz-rm-NuC">
+                                <rect key="frame" x="20" y="176" width="374" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="uyu-Pw-VNu" firstAttribute="trailing" secondItem="2ek-p0-Btv" secondAttribute="trailing" id="2OU-91-h46"/>
+                            <constraint firstAttribute="bottom" secondItem="SSl-Dk-I9f" secondAttribute="bottom" id="6bB-t1-SBo"/>
+                            <constraint firstItem="SSl-Dk-I9f" firstAttribute="trailing" secondItem="2ek-p0-Btv" secondAttribute="trailing" id="BFk-82-Jxm"/>
+                            <constraint firstItem="SSl-Dk-I9f" firstAttribute="top" secondItem="Zwz-pa-iWD" secondAttribute="top" id="Q5f-NX-nto"/>
+                            <constraint firstItem="uyu-Pw-VNu" firstAttribute="leading" secondItem="2ek-p0-Btv" secondAttribute="leading" id="Sby-7p-24y"/>
+                            <constraint firstItem="5pC-wV-jMm" firstAttribute="top" secondItem="uyu-Pw-VNu" secondAttribute="bottom" id="SyN-xJ-2P7"/>
+                            <constraint firstItem="5pC-wV-jMm" firstAttribute="leading" secondItem="Zwz-pa-iWD" secondAttribute="leading" id="c4Q-RI-9Ud"/>
+                            <constraint firstItem="SSl-Dk-I9f" firstAttribute="leading" secondItem="2ek-p0-Btv" secondAttribute="leading" id="emH-lD-qbg"/>
+                            <constraint firstItem="Djz-rm-NuC" firstAttribute="leading" secondItem="2ek-p0-Btv" secondAttribute="leading" constant="20" id="epD-ra-UTV"/>
+                            <constraint firstAttribute="trailing" secondItem="5pC-wV-jMm" secondAttribute="trailing" id="hYK-hY-o2o"/>
+                            <constraint firstItem="uyu-Pw-VNu" firstAttribute="top" secondItem="Zwz-pa-iWD" secondAttribute="top" id="sGf-6Y-1hI"/>
+                            <constraint firstItem="Djz-rm-NuC" firstAttribute="top" secondItem="5pC-wV-jMm" secondAttribute="bottom" constant="28" id="uuz-cT-D7E"/>
+                            <constraint firstItem="2ek-p0-Btv" firstAttribute="trailing" secondItem="Djz-rm-NuC" secondAttribute="trailing" constant="20" id="x6G-li-jXD"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2ek-p0-Btv"/>
+                    </view>
+                    <connections>
+                        <segue destination="p3B-Tr-aI7" kind="show" identifier="ViewCalendarSegue" id="8t0-2a-bis"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hdb-le-URu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1114.4927536231885" y="115.84821428571428"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="sel-Wh-jkN">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="p3B-Tr-aI7" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eoU-Fr-wWq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BoatelllV2" translatesAutoresizingMaskIntoConstraints="NO" id="ofy-Nm-03a">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ofy-Nm-03a" firstAttribute="trailing" secondItem="fjV-W2-BYb" secondAttribute="trailing" id="80F-9W-TVH"/>
+                            <constraint firstAttribute="bottom" secondItem="ofy-Nm-03a" secondAttribute="bottom" id="giL-ph-8C6"/>
+                            <constraint firstItem="ofy-Nm-03a" firstAttribute="leading" secondItem="fjV-W2-BYb" secondAttribute="leading" id="i8Q-4Z-bJB"/>
+                            <constraint firstItem="ofy-Nm-03a" firstAttribute="top" secondItem="eoU-Fr-wWq" secondAttribute="top" id="uS1-8G-plG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fjV-W2-BYb"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="YaB-P1-YS5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2AQ-b3-SWc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1978.2608695652175" y="113.83928571428571"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="iJO-NO-IrN"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="BoatLogoWhite copy" width="200" height="200"/>
         <image name="BoatelllV2" width="853" height="1280"/>
+        <image name="Mechanic copy" width="999" height="671"/>
         <image name="person.crop.circle.fill" catalog="system" width="128" height="121"/>
     </resources>
 </document>
